<resources>
    <string name="app_name">EoE Manager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_survey_select">SurveySelect</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_surveys">Surveys</string>

    <string name="s1_f">How often do you have chest pain, ache, or hurt?</string>
    <string name="s1_s">How bad is the chest pain, ache, or hurt?</string>
    <string name="s2_f">How often do you have heartburn(burning in your chest, mouth, or throat)?</string>
    <string name="s2_s">How bad is your heartburn(burning in your chest, mouth, or throat)?</string>
    <string name="s3_f">How often do you have stomach aches or belly aches?</string>
    <string name="s3_s">How bad are the stomach aches or belly aches?</string>
    <string name="s4_f">How often do you have trouble swallowing?</string>
    <string name="s4_s">How bad is the trouble swallowing?</string>
    <string name="s5_f">How often do you feel like food gets stuck in your throat or chest?</string>
    <string name="s5_s">How bad is it when food gets stuck in your throat or chest?</string>
    <string name="s6_f">How often do you need to drink a lot to help swallow your food?</string>
    <string name="s6_s">How bad is it if you don\'t drink a lot to help swallow your food?</string>
    <string name="s7_f">How often do you vomit (throw up)?</string>
    <string name="s7_s">How bad is the vomiting (throwing up)?</string>
    <string name="s8_f">How often do you feel nauseous (feel like you’re going to throw up, but don’t)?</string>
    <string name="s8_s">How bad is the nausea (feeling like you’re going to throw up, but don’t)?</string>
    <string name="s9_f">How often does food come back up your throat when eating?</string>
    <string name="s9_s">How bad is the food coming back up your throat when eating?</string>
    <string name="s10_f">How often do you eat less food than other?</string>
    <string name="s11_f">How often do you need more time to eat than other?</string>

    <string name="s1_q1">I have chest pain, ache, or hurt</string>
    <string name="s1_q2">I have burning in my chest, mouth, or throat (heartburn)</string>
    <string name="s1_q3">I have stomach aches or belly aches</string>
    <string name="s1_q4">I throw up (vomit)</string>
    <string name="s1_q5">I feel like I am going to throw up, but don’t (nausea)</string>
    <string name="s1_q6">When I am eating food comes back up my throat</string>

    <string name="s2_q1">I have trouble swallowing</string>
    <string name="s2_q2">I feel like food gets stuck in my throat or chest</string>
    <string name="s2_q3">I need to drink to help me swallow my food</string>
    <string name="s2_q4">I need more time to eat than other teens my age</string>

    <string name="s3_q1">It is hard for me to remember to take my medicines</string>
    <string name="s3_q2">I do not want to take my medicines</string>
    <string name="s3_q3">I do not like going to the doctor</string>
    <string name="s3_q4">I do not like getting an endoscopy (scope, EGD)</string>
    <string name="s3_q5">I do not like getting allergy testing</string>

    <string name="s4_q1">I worry about having EoE</string>
    <string name="s4_q2">I worry about getting sick in front of other people</string>
    <string name="s4_q3">I worry about what other people think about me because of EoE</string>
    <string name="s4_q4">I worry about going to the doctor</string>
    <string name="s4_q5">I worry about getting an endoscopy (scope, EGD)</string>
    <string name="s4_q6">I worry about getting allergy testing</string>

    <string name="s5_q1">I have trouble telling other people about EoE</string>
    <string name="s5_q2">I have trouble talking to my parents about how I feel</string>
    <string name="s5_q3">I have trouble talking to other adults about how I feel</string>
    <string name="s5_q4">I have trouble talking to my friends about how I feel</string>
    <string name="s5_q5">I have trouble talking to doctors or nurses about how I feel</string>

    <string name="s6_s7">Are there foods you are allergic to and can\'t eat?</string>

    <string name="s6_q1">It is hard not being allowed to eat some foods</string>
    <string name="s6_q2">It is hard for me not to sneak foods that I am allergic to</string>
    <string name="s6_q3">It is hard for me not to eat the same things as my family</string>
    <string name="s6_q4">It is hard for me not to eat the same things as my friends</string>

    <string name="s7_q1">I worry about eating foods I’m allergic to or not supposed to eat</string>
    <string name="s7_q2">I feel mad (get upset) about not eating foods I am allergic to or not supposed to eat</string>
    <string name="s7_q3">I feel sad about not eating foods I am allergic to or not supposed to eat</string>

    <string name="s8">Do you have a Feeding tube in your nose or stomach?</string>

    <string name="s8_q1">It is hard for me to remember to use my feeding tube</string>
    <string name="s8_q2">It is hard for me to use my feeding tube</string>

    <string name="fd_where">Where did you eat this food?</string>
    <string name="fd_which">Which meal is this?</string>
    <string name="fd_who">Who did you eat with?</string>
    <string name="fd_feelBefore">How did you feel before?</string>
    <string name="fd_feelAfter">How did you feel after?</string>
    <string name="fd_Someone">Did Someone ate the same food with you</string>
    <string name="fd_others">Do they also have the same symptoms like you</string>
    <string name="fd_worry">Are you worried there was something in your meal that make you feel bad?</string>
    <string name="fd_whosInput">Are you a parent?</string>

    <string name="ut_1">Are you currently taking steroids for EoE?</string>
    <string name="ut_2">Are you currently on any dietary therapies?</string>
    <string name="ut_3">Food elimination?</string>
    <string name="ut_4">Elemental diet?</string>
    <string name="ut_5">Is your elimination diet based on …  </string>
    <string name="ut_6">Indicate the foods that you are eliminating from your diet</string>
    <string name="ut_7">Exclusive elemental diet with no foods?</string>
    <string name="ut_8">Supplemental formula with some allowable foods?</string>
    <string name="ut_9">Are you currently participating in food trials?</string>
    <string name="ut_10">Indicate the foods that you are currently eating …</string>

    <string name="ethnicity">Are you Hispanic or Latino origin ?</string>

    <string-array name="ethnicity_a">
        <item>Yes</item>
        <item>No</item>

    </string-array>

    <string-array name="fatherEdu_a">
        <item>Less than 9th grade</item>
        <item>9&#8211;12th grade, no diploma</item>
        <item>High school graduate(or GED/equivalent)</item>
        <item>Associate\'s Degree or Vocational Training</item>
        <item>Some college (no degree)</item>
        <item>Bachelor\'s degree</item>
        <item>Graduate or professional degree</item>

    </string-array>

    <string-array name="motherEdu_a">
        <item>Less than 9th grade</item>
        <item>9&#8211;12th grade, no diploma</item>
        <item>High school graduate(or GED/equivalent)</item>
        <item>Associate\'s Degree or Vocational Training</item>
        <item>Some college (no degree)</item>
        <item>Bachelor\'s degree</item>
        <item>Graduate or professional degree</item>
    </string-array>


    <string name="Grade">Grade</string>

    <string-array name="Grade_a">
        <item>Pre-school</item>
        <item>Kindergarten</item>
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
        <item>11th</item>
        <item>12th</item>
    </string-array>

    <string name="Race">What is your race? </string>

    <string-array name="Race_a">
        <item>White</item>
        <item>Black or African American</item>
        <item>American Indian or Alaska Native</item>
        <item>Asian</item>
        <item>Pacific Islander</item>
        <item>Other race</item>
    </string-array>

    <string-array name="disease_a">
        <item>Less than 1 year</item>
        <item>1 – 5 years</item>
        <item>Greater than 5 years</item>

    </string-array>


    <string-array name="householdIncome_a">
        <item>Less than $10,000</item>
        <item>$10,000 to $14,999</item>
        <item>$15,000 to $24,999</item>
        <item>$25,000 to $34,999</item>
        <item>$35,000 to $49,999</item>
        <item>$75,000 to $99,999</item>
        <item>$100,000 or more</item>
    </string-array>

    <string-array name="fd_where_a">
        <item>Home</item>
        <item>School</item>
        <item>Restaurant</item>
    </string-array>
    <string-array name="fd_which_a">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Snack</item>
        <item>Dinner</item>
    </string-array>
    <string-array name="fd_who_a">
        <item>Alone</item>
        <item>Friends</item>
        <item>Co-workers</item>
        <item>Others</item>
    </string-array>


    <string name="php_syncUser">https://people.cs.clemson.edu/~rchowda/Projects/EoE/test_app.php</string>
    <string name="title_activity_user_treatment">UserTreatment</string>

    <string name="about_app">This app is designed and developed for patients undergoing treatment for Eosinophilic Esophagitis (EoE). Patient is hereby referred to app user. \n \n
User needs to complete a one-time registration in order to utilize the services provided. The app offers services such as Interactive surveys, capturing diet information, survey reminder, cloud, etc. Services such as cloud help in synchronizing the data to external resources, which indeed facilitates doctors to access the data in real-time. Apart from these services, the app also facilitates user to submit a survey offline, yes! It’s offline. The app automatically recognizes when the device is connected to an active network and synchronizes the data with no pain. As said earlier, the app enhances user survey experience by organizing questions automatically in accordance with the previous answers.\n
</string>
    <string name="ack_app"><b>Mentor:</b> Dr. Roy Pargas\n\n<b>Co-mentors:</b> Dr. Williams and Greenville Hospital Systems\n\n<b>Teaching Assistants:</b> Greg Edison and Sean Southard\n\nAfter all, StackOverflow for answering every length of question we had :)\n\n
</string>

</resources>
