<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.clemson.eoe.UserTreatment"
    tools:showIn="@layout/activity_user_treatment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView4" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ut_1"
            android:id="@+id/ut_1_q"
            android:layout_marginBottom="30dp" />



        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:id="@+id/ut_1"
            android:layout_marginBottom="30dp"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No"
                android:id="@+id/ut_1_n"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yes"
                android:id="@+id/ut_1_y"
                android:checked="false" />
        </RadioGroup>

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ut_2"
            android:id="@+id/ut_2_q"
            android:layout_marginBottom="30dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:id="@+id/ut_2"
            android:layout_marginBottom="30dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yes"
                android:checked="false" />
        </RadioGroup>

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ut_3"
            android:id="@+id/ut_3_q"
            android:layout_marginBottom="30dp"
             android:visibility="gone"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:id="@+id/ut_3"
            android:layout_marginBottom="30dp"
            android:visibility="gone">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yes"
                android:checked="false" />
        </RadioGroup>


         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ut_5"
            android:id="@+id/ut_5_q"
            android:layout_marginBottom="30dp"
             android:visibility="gone"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:id="@+id/ut_5"
            android:layout_marginBottom="30dp"
            android:visibility="gone">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Allergy testing/Symptoms"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Six food elimination diet"
                android:checked="false" />
        </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ut_6"
                android:id="@+id/ut_6_q"
                android:layout_marginBottom="30dp"
                android:visibility="gone"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:id="@+id/ut_6_holder"
            android:visibility="gone">
            <EditText
                android:id="@+id/ut_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Food details"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLines="5"
                android:singleLine="false"
                />

        </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ut_4"
                android:id="@+id/ut_4_q"
                android:layout_marginBottom="30dp"
                android:visibility="gone"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:id="@+id/ut_4"
                android:layout_marginBottom="30dp"
                android:visibility="gone">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"
                    android:checked="false" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ut_7"
                android:id="@+id/ut_7_q"
                android:layout_marginBottom="30dp"
                android:visibility="gone"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:id="@+id/ut_7"
                android:layout_marginBottom="30dp"
                android:visibility="gone">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"
                    android:checked="false" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ut_8"
                android:id="@+id/ut_8_q"
                android:layout_marginBottom="30dp"
                android:visibility="gone"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:id="@+id/ut_8"
                android:layout_marginBottom="30dp"
                android:visibility="gone">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"
                    android:checked="false" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ut_9"
                android:id="@+id/ut_9_q"
                android:layout_marginBottom="30dp"
                android:visibility="gone"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:id="@+id/ut_9"
                android:layout_marginBottom="30dp"
                android:visibility="gone">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    android:checked="false" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"
                    android:checked="false" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ut_10"
                android:id="@+id/ut_10_q"
                android:layout_marginBottom="30dp"
                android:visibility="gone"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:id="@+id/ut_10_holder"
                android:visibility="gone">
                <EditText
                    android:id="@+id/ut_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Food details"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords"
                    android:maxLines="5"
                    android:singleLine="false"
                    />

            </android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:id="@+id/button5"
                android:layout_marginBottom="100dp"
                android:onClick="onUserTreatmentSubmit"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
